--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>MyPortfolio</title>
   </head>
   <body class="bg-[#1e2121] w-[100vw] h-[100%] overflow-x-hidden !scroll-smooth">
     <div id="root"></div>
